# koduck-quant

./: .CHANGELOG.md  .dockerignore  .env.example  .gitignore  .gitmessage.txt  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER.md  Friedrich.md  LICENSE  Makefile  README.md  TASK_GUIDE.md  check-phase2-status.sh  cspell.json  docker-compose.auth.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  koduck.agent.md  login.txt  rewrite_profile.py  start-dev.sh  start-parallel-dev.sh  stop-dev.sh  test_writer.py  update_settings.py  william.md  yaoming.md
koduck-agent/: Dockerfile  README.md  check_memory_system.py  memory_SETUP_CHECKLIST.md  pyproject.toml  setup_memory_env.sh
koduck-agent/koduck/: __init__.py  __main__.py  agent_roles.py  base.py  client_factory.py  config.py  deepseek_client.py  gpt_client.py  grpc_llm_adapter.py  kimi_client.py  kline_db.py  memory_pg.py  minimax_client.py  openai_client.py  quant_tools.py  retry.py  schema.py  server.py  skill_domain.py  skill_installer.py  skill_source.py  skill_source_local.py  skill_source_openclaw.py  skills_lock.py  tool_policy.py  tool_registry.py  tool_runtime.py  zlm_client.py
koduck-agent/scripts/: memory_tasks.py  run.ps1  run.sh  skills.py
koduck-agent/tests/: test_agent_roles.py  test_agent_runtime_events.py  test_basic.py  test_kline_db.py  test_memory_pg_config.py  test_quant_tools.py  test_server_runtime_options.py  test_skill_installer.py  test_skill_source_openclaw.py  test_skills_lock.py  test_sub_agents.py  test_tool_policy.py
koduck-ai/: Cargo.toml  Dockerfile  build.rs
koduck-ai/docs/adr/: 0001-init-rust-grpc-project-structure.md  0002-config-and-secret-management.md  0003-unified-error-framework.md  0004-freeze-proto-contract-v1.md  0005-build-rs-and-code-generation.md  0006-capabilities-negotiation-protocol.md  0007-sse-resume-with-high-watermark.md  0008-stream-queue-and-graceful-shutdown.md  0009-cancel-generation-guard-and-abortable-stream-wrapper.md  0010-unified-downstream-error-mapper.md  0011-configurable-degrade-policy-and-observable-hit-rate.md  0012-retry-budget-and-local-timeout-budget.md  0013-apisix-grpc-upstream-baseline-for-southbound-calls.md  0014-apisix-gateway-plugin-baseline-for-ai-routes.md  0015-unified-llm-provider-trait-with-adapter-compat.md  0016-shared-reqwest-foundation-for-direct-llm-providers.md  0017-openai-compatible-direct-provider-adapters.md  0018-llm-router-mode-switch-and-explicit-provider-selection.md  0019-mode-aware-capability-negotiation-and-startup-probing.md  0020-intent-aware-memory-query-routing.md  0021-ner-aware-recall-routing-in-ai.md
koduck-ai/docs/design/: ai-decoupled-architecture.md
koduck-ai/docs/implementation/: koduck-ai-rust-grpc-tasks.md
koduck-ai/prompts/system/: README.md  koduck-v1-lite.md
koduck-ai/src/: lib.rs  main.rs
koduck-ai/src/api/: flow_canvas.rs  intent.rs  llm_flow.rs  memory_io.rs  mod.rs  prompt.rs  session.rs  streaming.rs  tool_resolution.rs
koduck-ai/src/app/: lifecycle.rs  mod.rs
koduck-ai/src/auth/: mod.rs
koduck-ai/src/clients/: capability.rs  mod.rs  tool_catalog.rs  tool_execute.rs
koduck-ai/src/config/: mod.rs
koduck-ai/src/llm/: compat.rs  deepseek.rs  errors.rs  http.rs  kimi.rs  minimax.rs  mod.rs  openai.rs  provider.rs  router.rs  types.rs
koduck-ai/src/observe/: mod.rs
koduck-ai/src/orchestrator/: cancel.rs  mod.rs
koduck-ai/src/plan/: event.rs  mod.rs  model.rs  node.rs  orchestrator.rs  proposal.rs  renderer.rs
koduck-ai/src/registry/: mod.rs
koduck-ai/src/reliability/: degrade.rs  error.rs  error_mapper.rs  memory_fail_open.rs  memory_observe.rs  mod.rs  retry_budget.rs
koduck-ai/src/stream/: mod.rs  queue.rs  sse.rs
koduck-auth/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
koduck-auth/benches/: jwt_bench.rs  password_hash.rs
koduck-auth/docs/: ADR-0002-implement-grpc-services.md  ADR-0003-jwt-service-integration.md  ADR-0004-config-validation.md  ADR-0005-error-response-format.md  ADR-0008-redis-health-check.md  ADR-0009-jwt-service-integration.md  ADR-0010-argon2-config.md  ADR-0012-token-introspection-blacklist.md  ADR-0014-request-id-for-tracing.md  ADR-0015-implement-grpc-auth-methods.md  ADR-0018-integration-testing-strategy.md  ADR-0019-docker-image-optimization.md  ADR-0020-docker-image-size-analysis.md  ADR-0021-apisix-script-improvements.md  README.md
koduck-auth/docs/adr/: 0001-init-rust-grpc-project-structure.md  0002-implement-grpc-services.md  0004-config-validation.md  0005-error-response-format.md  (+21 more)
koduck-auth/migrations/: 001_initial.sql  202604090001_init_auth_schema.sql  202604090002_add_indexes.sql  202604110001_add_tenant_to_security_tables.sql
koduck-auth/scripts/: apisix-route-init-auth.sh
koduck-auth/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
koduck-auth/tests/: grpc_tests.rs  http_middleware_tests.rs  integration_tests.rs
koduck-memory/: .dockerignore  Cargo.toml  Dockerfile  build.rs
koduck-memory/config/: default.toml
koduck-memory/docs/: README.md
koduck-memory/migrations/: 0001_initial_schema.sql  0002_task_attempts.sql  0003_cleanup_turn_level_index_records.sql  0004_memory_summary_source_and_error.sql  0005_memory_units.down.sql  0005_memory_units.up.sql  0006_memory_unit_anchors.down.sql  0006_memory_unit_anchors.up.sql  0007_memory_unit_projection_and_traceback_rules.down.sql  0007_memory_unit_projection_and_traceback_rules.up.sql  0008_project_domain_class_primary_function.down.sql  0008_project_domain_class_primary_function.up.sql  0009_memory_index_records_memory_unit_mapping.down.sql  0009_memory_index_records_memory_unit_mapping.up.sql  0010_memory_units_drop_snippet.down.sql  0010_memory_units_drop_snippet.up.sql  0011_drop_memory_index_records.down.sql  0011_drop_memory_index_records.up.sql  0012_plan_store.down.sql  0012_plan_store.up.sql  0013_memory_unit_summary_status_values.down.sql  0013_memory_unit_summary_status_values.up.sql
koduck-memory/src/: lib.rs  main.rs
koduck-memory/tests/: grpc_service_tests.rs  retrieve_types_tests.rs
(+2914 files in other folders)
