[package]
name = "koduck-auth"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Koduck Team <dev@koduck.com>"]
description = "Koduck authentication service - Rust + gRPC implementation"
license = "MIT"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP 框架
axum = { version = "0.7", features = ["http2", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = [
    "cors",
    "trace",
    "compression-full",
    "request-id",
    "sensitive-headers",
] }
hyper = { version = "1.0", features = ["full"] }

# gRPC
tonic = { version = "0.11", features = ["tls", "gzip"] }
tonic-health = "0.11"
tonic-reflection = "0.11"
prost = "0.12"
prost-types = "0.12"

# 数据库
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }
deadpool-redis = "0.14"

# JWT
jsonwebtoken = "9.2"
rsa = { version = "0.9", features = ["pem", "sha2"] }
pkcs8 = { version = "0.10", features = ["pem", "pkcs5"] }

# 密码哈希
argon2 = "0.5"
sha2 = "0.10"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
base64 = "0.22"

# 配置
config = "0.14"
dotenvy = "0.15"

# 日志和监控
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "time",
] }
tracing-opentelemetry = "0.23"
opentelemetry = "0.22"
opentelemetry-jaeger = "0.21"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 验证
validator = { version = "0.16", features = ["derive"] }

# 时间和 UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP 客户端（调用其他服务）
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }

# 工具
lazy_static = "1.4"
once_cell = "1.19"
async-trait = "0.1"
futures = "0.3"
pin-project = "1.1"
regex = "1.10"

# 安全
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1.7", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "jwt_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
